--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <img src="assets/ellipse.png" alt="" class="ellipse1">
     <img src="assets/ellipse.png" alt="" class="ellipse2">
     <img src="assets/ellipse.png" alt="" class="ellipse3">
-    
+
     <img src="assets/Star4.png" alt="" class="star4">
 
     <img src="red0" alt="" class="red1">
@@ -58,6 +58,31 @@
 
     <img src="assets/Star3.png" alt="" class="star3">
     <img src="assets/AtoZ.png" alt="" class="AtoZ">
+
+    <img src="assets/iPhone-13-Pro-Front.png" alt="" class="iphone4">
+    <img src="assets/rednyellow.png" alt="" class="red2">
+    <img src="assets/ellipse.png" alt="" class="ellipse4">
+    <img src="assets/ellipse.png" alt="" class="ellipse5">
+    <img src="assets/ellipse.png" alt="" class="ellipse6">
+
+    <div class="premium">
+        <span> FEATURES </span>
+        <h1>Uifry Premium</h1>
+        <h2><img src="assets/cube-04.png" alt="" class="redstar">Budgeting Intervals </h2>
+        <p> Cum et convallis risus placerat aliquam, nunc.
+             Scelerisque aliquet faucibus tincidunt eu adipiscing sociis arcu lorem porttitor.
+        </p>
+
+        <h2> <img src="assets/hexagon.png" alt="" class="redstar"> Budgeting Intervals</h2>
+        <p> Cum et convallis risus placerat aliquam, nunc.
+            Scelerisque aliquet faucibus tincidunt eu adipiscing sociis arcu lorem porttitor.
+       </p>
+
+       <h2><img src="assets/redstar.png" alt="" class="redstar">Budgeting Intervals</h2>
+        <p> Cum et convallis risus placerat aliquam, nunc.
+            Scelerisque aliquet faucibus tincidunt eu adipiscing sociis arcu lorem porttitor.
+        </p>
+    </div>
 
 </body>
 <script src="script.js"></script>
