--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
         </p>
     </div>
 
+    <div class="iphones">
     <img src="assets/iPhone-13-Pro2.png" alt="" class="iphone1"/>
     <img src="assets/iPhone-13-Pro-Front.png" alt="" class="iphone2"/>
     <img src="assets/iPhone-13-Pro2.png" alt="" class="iphone3"/>
+    </div>
 
     <img src="assets/ellipse.png" alt="" class="ellipse1">
     <img src="assets/ellipse.png" alt="" class="ellipse2">
@@ -61,9 +63,11 @@
 
     <img src="assets/iPhone-13-Pro-Front.png" alt="" class="iphone4">
     <img src="assets/rednyellow.png" alt="" class="red2">
+    <img src="assets/rednyellow.png" alt="" class="red3">
     <img src="assets/ellipse.png" alt="" class="ellipse4">
     <img src="assets/ellipse.png" alt="" class="ellipse5">
     <img src="assets/ellipse.png" alt="" class="ellipse6">
+    <img src="assets/Star3.png" alt="" class="star5">
 
     <div class="premium">
         <span> FEATURES </span>
@@ -82,6 +86,53 @@
         <p> Cum et convallis risus placerat aliquam, nunc.
             Scelerisque aliquet faucibus tincidunt eu adipiscing sociis arcu lorem porttitor.
         </p>
+    </div>
+
+    <img src="assets/iPhone-13-Pro2.png" alt="" class="iphone5">
+    <img src="assets/visa.png" alt="" class="visa">
+
+    <div class="circles">
+        <img src="assets/ellipse.png" alt="" class="ellipse7">
+        <img src="assets/ellipse.png" alt="" class="ellipse8">
+        <img src="assets/ellipse.png" alt="" class="ellipse9">
+    </div>
+    <img src="assets/rednyellow.png" alt="" class="red4">
+
+    <div class="customise">
+        
+        <h1><img src="assets/redstar.png" alt="" class="icon1"> Fully Customisable</h1>
+        <p>Arcu at dictum sapien, mollis.
+            Vulputate sit id accumsan, ultricies.
+            In ultrices malesuada elit mauris etiam odio.
+            Duis tristique lacus, et blandit viverra nisl velit.
+            Sed mattis rhoncus, diam suspendisse sit nunc, gravida eu.
+            Lectus eget eget ac dolor neque lorem sapien, suspendisse aliquam.
+        </p>
+    </div>
+
+    <img src="assets/Star1.png" alt="" class="star6">
+
+    <div class="testimonial">
+        <h3>TESTIMONIAL</h1>
+        <h1>What Our Users Say About Us?</h1>
+        <h2>The Best Financial Accounting App Ever</h2>
+        <p>“Arcu at dictum sapien, mollis. Vulputate sit id accumsan, ultricies.
+            In ultrices malesuada elit mauris etiam odio. Duis tristique lacus, et blandit viverra nisl velit.
+            Sed mattis rhoncus, diam suspendisse sit nunc, gravida eu.
+            Lectus eget eget ac dolor neque lorem sapien, suspendisse aliquam.”
+        </p>
+        <img src="assets/usersmall.png" alt="" class="usersmall">
+        <h2 target="_self"> Nick Jonas </h2>
+
+    <div class="ellipses2">
+        <img src="assets/ellipse.png" alt="" class="ellipse10">
+        <img src="assets/ellipse.png" alt="" class="ellipse11">
+        <img src="assets/ellipse.png" alt="" class="ellipse12">
+        <img src="assets/users.png" alt="" class="users">
+        <img src="assets/rednyellow.png" alt="" class="red5">
+        <img src="assets/Star3.png" alt="" class="star7">
+        <img src="assets/Star3.png" alt="" class="star8">
+    </div>
     </div>
 
 </body>
