adding more features

--- a/index.html
+++ b/index.html
@@ -135,6 +135,55 @@
     </div>
     </div>
 
+    <div class="FAQ">
+        <h3> FAQ </h3>
+        <h1> Frequently Asked Questions </h1>
+        <ul>
+            <li>
+            <h2> The Best Financial Accounting App Ever </h2>
+            <p> “Arcu at dictum sapien, mollis.
+             Vulputate sit id accumsan, ultricies.
+             In ultrices malesuada elit mauris.“
+                </p>
+            </li>
+            <li>
+                <h2> The Best Financial Accounting App Ever </h2>
+                <p> “Arcu at dictum sapien, mollis.
+                    Vulputate sit id accumsan, ultricies.
+                    In ultrices malesuada elit mauris.“
+                </p>
+            </li>
+            <li>
+                <h2> The Best Financial Accounting App Ever </h2>
+                <p> “Arcu at dictum sapien, mollis.
+                    Vulputate sit id accumsan, ultricies.
+                    In ultrices malesuada elit mauris.“
+                </p>
+            </li>
+            <li>
+                <h2> The Best Financial Accounting App Ever </h2>
+                <p> “Arcu at dictum sapien, mollis.
+                    Vulputate sit id accumsan, ultricies.
+                    In ultrices malesuada elit mauris.“
+                </p>
+            </li>
+            <li>
+                <h2> The Best Financial Accounting App Ever </h2>
+                <p> “Arcu at dictum sapien, mollis.
+                    Vulputate sit id accumsan, ultricies.
+                    In ultrices malesuada elit mauris.“
+                </p>
+            </li>
+            <li>
+                <h2> The Best Financial Accounting App Ever </h2>
+                <p> “Arcu at dictum sapien, mollis.
+                    Vulputate sit id accumsan, ultricies.
+                    In ultrices malesuada elit mauris.“
+                </p>
+            </li>
+        </ul>
+    </div>
+
 </body>
 <script src="script.js"></script>
 </html>
